// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`queries list 1`] = `
"query {
\tauthors: listAuthor {
\t\tid
\t\tname
\t\temail
\t}
}
"
`;

exports[`queries multiple queries 1`] = `
"query {
\tauthors: listAuthor {
\t\tid
\t\tname
\t\temail
\t}
\tposts: listPost {
\t\tid
\t\tpublishedAt
\t}
}
"
`;

exports[`queries single query 1`] = `
"query {
\tvalue: listPost {
\t\tid
\t\tpublishedAt
\t}
}
"
`;

exports[`queries nested object 1`] = `
"query {
\tauthors: listAuthor {
\t\tid
\t\tname
\t\temail
\t\tposts {
\t\t\tid
\t\t\tpublishedAt
\t\t\ttags {
\t\t\t\tid
\t\t\t\tname
\t\t\t}
\t\t}
\t}
}
"
`;

exports[`queries nested object args 1`] = `
"query($PostWhere_0: PostWhere, $Int_1: Int) {
\tauthors: listAuthor {
\t\tid
\t\tname
\t\temail
\t\tposts(filter: $PostWhere_0, limit: $Int_1) {
\t\t\tid
\t\t\tpublishedAt
\t\t}
\t}
}
"
`;

exports[`queries list with args: 
\t\t\t"query($AuthorWhere_0: AuthorWhere, $AuthorOrderBy_1: [AuthorOrderBy!], $Int_2: Int, $Int_3: Int) {
\t\t\t\tauthors: listAuthor(filter: $AuthorWhere_0, orderBy: $AuthorOrderBy_1, limit: $Int_2, offset: $Int_3) {
\t\t\t\t\tid
\t\t\t\t\tname
\t\t\t\t\temail
\t\t\t\t}
\t\t\t}
\t\t\t"
\t\t 1`] = `
"query($AuthorWhere_0: AuthorWhere, $AuthorOrderBy_1: [AuthorOrderBy!], $Int_2: Int, $Int_3: Int) {
\tauthors: listAuthor(filter: $AuthorWhere_0, orderBy: $AuthorOrderBy_1, limit: $Int_2, offset: $Int_3) {
\t\tid
\t\tname
\t\temail
\t}
}
"
`;

exports[`queries get by id 1`] = `
"query($AuthorUniqueWhere_0: AuthorUniqueWhere!) {
\tauthors: getAuthor(by: $AuthorUniqueWhere_0) {
\t\tid
\t\tname
\t\temail
\t}
}
"
`;
